# mapkitjs-token-gen

./: .gitignore  Cargo.toml  README.md  key.p8
src/: lib.rs  tests.rs
