[package]
name = "mapkitjs-token-gen"
version = "0.2.0"
authors = ["Schr3da <strieder.georg@gmail.com>"]
description = "This utility library provides wrapper functions to generate MapKitJS valid jwt tokens for your rust program."
repository = "https://github.com/Schr3da/mapkitjs-token-gen"
documentation = "https://github.com/Schr3da/mapkitjs-token-gen"
license = "MIT"
edition = "2018"

[dependencies]
serde = "1.0.104"
jsonwebtoken = "7.1.0"

